--- a/frontend/src/app/pages/admin/admin.component.html
+++ b/frontend/src/app/pages/admin/admin.component.html
@@ -54,34 +54,72 @@
         </div>
       </div>
       <hr />
-      <input
-        style="margin-top: 20px"
-        type="text"
-        class="form-control"
-        placeholder="1. Antwort"
-        [(ngModel)]="answer1"
-      />
-      <input
-        style="margin-top: 20px"
-        type="text"
-        class="form-control"
-        placeholder="2. Antwort"
-        [(ngModel)]="answer2"
-      />
-      <input
-        style="margin-top: 20px"
-        type="text"
-        class="form-control"
-        placeholder="3. Antwort"
-        [(ngModel)]="answer3"
-      />
-      <input
-        style="margin-top: 20px"
-        type="text"
-        class="form-control"
-        placeholder="4. Antwort"
-        [(ngModel)]="answer4"
-      />
+      <div class="d-flex align-items-center justify-content-center">
+        <input
+          type="checkbox"
+          class="form-check-input mx-3"
+          [(ngModel)]="checkBox1"
+          (change)="checkCorrectAnswers()"
+          [checked]="checkBox1"
+        />
+        <input
+          style="margin-top: 20px"
+          type="text"
+          class="form-control"
+          placeholder="1. Antwort"
+          [(ngModel)]="answer1"
+        />
+      </div>
+      <div class="d-flex align-items-center justify-content-center">
+        <input
+          type="checkbox"
+          class="form-check-input mx-3"
+          [(ngModel)]="checkBox2"
+          (change)="checkCorrectAnswers()"
+          [checked]="checkBox2"
+        />
+
+        <input
+          style="margin-top: 20px"
+          type="text"
+          class="form-control"
+          placeholder="2. Antwort"
+          [(ngModel)]="answer2"
+        />
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center">
+        <input
+          type="checkbox"
+          class="form-check-input mx-3"
+          [(ngModel)]="checkBox3"
+          (change)="checkCorrectAnswers()"
+        />
+
+        <input
+          style="margin-top: 20px"
+          type="text"
+          class="form-control"
+          placeholder="3. Antwort"
+          [(ngModel)]="answer3"
+        />
+      </div>
+      <div class="d-flex align-items-center justify-content-center">
+        <input
+          type="checkbox"
+          class="form-check-input mx-3"
+          [(ngModel)]="checkBox4"
+          (change)="checkCorrectAnswers()"
+        />
+
+        <input
+          style="margin-top: 20px"
+          type="text"
+          class="form-control"
+          placeholder="4. Antwort"
+          [(ngModel)]="answer4"
+        />
+      </div>
 
       <div class="d-flex justify-content-center" style="margin-top: 20px">
         <button
