--- a/frontend/src/app/pages/admin/question-edit-modal/question-edit-modal.component.html
+++ b/frontend/src/app/pages/admin/question-edit-modal/question-edit-modal.component.html
@@ -1,13 +1,23 @@
-<div class="row d-flex justify-content-center">
+<div class="modal-header">
+  <h5 class="modal-title">Frage erstellen</h5>
+
+  <button
+    type="button"
+    class="btn-close"
+    (click)="closeModal()"
+    aria-label="Close"
+  ></button>
+</div>
+<div
+  class="row d-flex justify-content-center modal-body modal-lg"
+  style="margin: 20px"
+>
   <!-- RightSide -->
-  <div class="col-md-8 mx-3">
+  <div class="col-md-11 mx-3">
     <!-- RightBody -->
     <div class="shadow box">
       <div class="row d-flex">
-        <div class="col-md-1">
-          <p>{{ id }}</p>
-        </div>
-        <div class="col-md-11">
+        <div class="col-md-12">
           <input
             type="text"
             class="form-control"
@@ -36,8 +46,10 @@
           [(ngModel)]="answers[index]"
         />
       </div>
-
-      <div class="d-flex justify-content-center" style="margin-top: 20px">
+      <div
+        class="d-flex justify-content-center modal-footer"
+        style="margin-top: 20px"
+      >
         <button
           class="btn btn-warning btn-large"
           type="button"
@@ -45,6 +57,14 @@
         >
           Frage erstellen
         </button>
+      </div>
+      <div
+        *ngIf="showErrorMessage"
+        class="alert alert-danger"
+        role="alert"
+        style="margin: 10px"
+      >
+        <h4>{{ errorMessage }}</h4>
       </div>
     </div>
   </div>
