--- a/frontend/src/app/pages/admin/question-list/question-edit.component.html
+++ b/frontend/src/app/pages/admin/question-list/question-edit.component.html
@@ -5,7 +5,7 @@
 </header>
 <div class="row d-flex justify-content-center">
   <!-- LeftSide -->
-  <div class="col-md-3">
+  <div class="col-md-6">
     <div class="shadow mx-3 box">
       <h2 class="d-flex justify-content-center">Fragen</h2>
       <div
@@ -33,7 +33,7 @@
         class="btn btn-warning btn-lg w-100"
         (click)="openQuestionEditModal()"
       >
-        Neue Frage hinzufügens
+        Neue Frage hinzufügen
         <span class="onlinedot"></span>
       </button>
     </div>
