--- a/frontend/src/app/pages/admin/admin.component.html
+++ b/frontend/src/app/pages/admin/admin.component.html
@@ -4,155 +4,70 @@
       <div
         class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100"
       >
-        <a
-          href="/"
-          class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none"
-        >
-          <span class="fs-5 d-none d-sm-inline">Menu</span>
-        </a>
+        <span class="fs-5 d-none d-sm-inline">Quiz App</span>
+
         <ul
-          class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
+          class="nav container-fluid nav-pills d-inline flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start min-vh-100"
           id="menu"
         >
-          <li class="nav-item">
-            <a href="#" class="nav-link align-middle px-0">
-              <i class="fs-4 bi-house"></i>
+          <li
+            class="nav-item mt-5 d-flex align-items-center justify-content-between"
+          >
+            <div class="d-flex align-items-center">
+              <mat-icon
+                aria-hidden="false"
+                aria-label="Example home icon"
+                fontIcon="home"
+              ></mat-icon>
               <span class="ms-1 d-none d-sm-inline">Home</span>
-            </a>
+            </div>
+            <mat-icon aria-hidden="false">keyboard_arrow_right</mat-icon>
           </li>
-          <li>
-            <a
-              href="#submenu1"
-              data-bs-toggle="collapse"
-              class="nav-link px-0 align-middle"
-            >
-              <i class="fs-4 bi-speedometer2"></i>
-              <span class="ms-1 d-none d-sm-inline">Dashboard</span>
-            </a>
-            <ul
-              class="collapse show nav flex-column ms-1"
-              id="submenu1"
-              data-bs-parent="#menu"
-            >
-              <li class="w-100">
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 1
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 2
-                </a>
-              </li>
-            </ul>
+          <li
+            class="nav-item mt-3 d-flex align-items-center justify-content-between"
+          >
+            <div class="d-flex align-items-center">
+              <mat-icon fontIcon="group"></mat-icon>
+              <span
+                (click)="showUsers = true; showQuestionEdit = false"
+                class="ms-1 d-none d-sm-inline"
+                >Nutzer</span
+              >
+            </div>
+            <mat-icon>keyboard_arrow_right</mat-icon>
           </li>
-          <li>
-            <a href="#" class="nav-link px-0 align-middle">
-              <i class="fs-4 bi-table"></i>
-              <span class="ms-1 d-none d-sm-inline">Orders</span></a
-            >
+          <li
+            (click)="showQuestionEdit = true; showUsers = false"
+            class="nav-item mt-3 d-flex align-items-center justify-content-between"
+          >
+            <div class="d-flex align-items-center">
+              <mat-icon
+                aria-hidden="false"
+                fontIcon="question_answer"
+              ></mat-icon>
+
+              <span class="ms-1 d-none d-sm-inline">Fragen</span>
+            </div>
+            <mat-icon>keyboard_arrow_right</mat-icon>
           </li>
-          <li>
-            <a
-              href="#submenu2"
-              data-bs-toggle="collapse"
-              class="nav-link px-0 align-middle"
-            >
-              <i class="fs-4 bi-bootstrap"></i>
-              <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a
-            >
-            <ul
-              class="collapse nav flex-column ms-1"
-              id="submenu2"
-              data-bs-parent="#menu"
-            >
-              <li class="w-100">
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 1</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 2</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a
-              href="#submenu3"
-              data-bs-toggle="collapse"
-              class="nav-link px-0 align-middle"
-            >
-              <i class="fs-4 bi-grid"></i>
-              <span class="ms-1 d-none d-sm-inline">Products</span>
-            </a>
-            <ul
-              class="collapse nav flex-column ms-1"
-              id="submenu3"
-              data-bs-parent="#menu"
-            >
-              <li class="w-100">
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 1</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 2</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 3</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 4</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="nav-link px-0 align-middle">
-              <i class="fs-4 bi-people"></i>
-              <span class="ms-1 d-none d-sm-inline">Customers</span>
-            </a>
+          <li
+            (click)="signOut()"
+            class="nav-item mt-3 d-flex align-items-center justify-content-between"
+          >
+            <div class="d-flex align-items-center">
+              <mat-icon>exit_to_app</mat-icon>
+
+              <span class="ms-1 d-none d-sm-inline">Abmelden</span>
+            </div>
+            <mat-icon>keyboard_arrow_right</mat-icon>
           </li>
         </ul>
         <hr />
-        <div class="dropdown pb-4">
-          <a
-            href="#"
-            class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-            id="dropdownUser1"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <img
-              src="https://github.com/mdo.png"
-              alt="hugenerd"
-              width="30"
-              height="30"
-              class="rounded-circle"
-            />
-            <span class="d-none d-sm-inline mx-1">loser</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-            <li><a class="dropdown-item" href="#">New project...</a></li>
-            <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li><a class="dropdown-item" href="#">Sign out</a></li>
-          </ul>
-        </div>
       </div>
     </div>
     <div class="col py-3">
-      <app-question-edit></app-question-edit>
+      <app-question-edit *ngIf="showQuestionEdit"></app-question-edit>
+      <app-user-list *ngIf="showUsers"></app-user-list>
     </div>
   </div>
 </div>
