--- a/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
+++ b/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
@@ -25,4 +25,7 @@
   <button type="button" class="btn btn-primary" (click)="addFriend()">
     Freund hinzufügen
   </button>
+  <button type="button" class="btn btn-primary" (click)="sendGameRequest()">
+    Duell herausfordern
+  </button>
 </div>
