--- a/frontend/src/app/pages/homepage/quiz-start/quiz-start.component.html
+++ b/frontend/src/app/pages/homepage/quiz-start/quiz-start.component.html
@@ -1,4 +1,24 @@
-<p>quiz-start works!</p>
-<button class="col btn btn-outline-dark headerButton">
-  <h4 class="col">Start</h4>
-</button>
+<div
+  class="bg-warning"
+  style="
+    border-radius: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    flex-direction: column;
+  "
+>
+  <div class="header">
+    <h1 class="text-dark">QuizGame</h1>
+  </div>
+  <div class="body">
+    <p style="font-size: larger">
+      Um das Spiel zu starten einfach einen Freund zu einem Duell Herausfordern
+    </p>
+  </div>
+  <div class="footer">
+    <p style="font-size: smaller">Good Luck & Have Fun</p>
+  </div>
+</div>
