Get RandomQuestions to the Quizgame

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -83,7 +83,7 @@
       class="shadow box"
       [ngClass]="toggleQuizGameStart ? ['displayShow'] : ['displayHide']"
     >
-      <app-quiz-game></app-quiz-game>
+      <app-quiz-game [randomQuestions]="randomQuestions"></app-quiz-game>
     </div>
 
     <!-- ProfilArea -->
