--- a/frontend/src/app/pages/homepage/quiz-request-modal/quiz-request-modal.component.html
+++ b/frontend/src/app/pages/homepage/quiz-request-modal/quiz-request-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h5 class="modal-title">Spielerprofil</h5>
+  <h5 class="modal-title">Duell Anfrage</h5>
 
   <button type="button" class="btn-close" aria-label="Close"></button>
 </div>
@@ -7,15 +7,15 @@
   <div class="d-flex align-items-start">
     <span class="material-icons" style="font-size: 140px">person</span>
     <div class="row mx-3 my-3">
-      <h5>Istegi kabul et ya da Reddet</h5>
+      <h5>Anfrage annehmen oder ablehnen</h5>
     </div>
   </div>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-primary" (click)="acceptRequest()">
-    Accept
+    Annehmen
   </button>
   <button type="button" class="btn btn-primary" (click)="declineRequest()">
-    Cancel
+    Ablehnen
   </button>
 </div>
