--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -87,6 +87,7 @@
         [randomQuestions]="randomQuestions"
         [friendId]="friendId"
         [userId]="userId"
+        [toogleGameStart]="toogleGameStart"
       ></app-quiz-game>
     </div>
 
