--- a/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.css
+++ b/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.css
@@ -29,3 +29,12 @@ button:hover,
   background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
   box-shadow: 5px 5px 10px #00dbde;
 }
+
+.displayHide {
+  display: none !important;
+}
+.displayShow {
+  overflow-y: scroll;
+  height: 500px;
+  display: block !important;
+}
