--- a/frontend/src/app/pages/homepage/statistik/statistik.component.html
+++ b/frontend/src/app/pages/homepage/statistik/statistik.component.html
@@ -10,6 +10,7 @@
     <h2>Spiele Gesamt: {{ userAllGames }}</h2>
     <h2>Gewonnen: {{ userWins }}</h2>
     <h2>Verloren: {{ userLoses }}</h2>
+    <h2>Unentschieden: {{ userDraw }}</h2>
   </div>
   <div class="col-md-7">
     <app-pie-chart></app-pie-chart>
