--- a/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
+++ b/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
@@ -22,7 +22,7 @@
   <button type="button" class="btn btn-secondary" (click)="closeModal()">
     Close
   </button>
-  <button type="button" class="btn btn-primary" (click)="addFriend()">
+  <button type="button" class="btn btn-primary" (click)="sendFriendRequest()">
     Freund hinzufügen
   </button>
   <button type="button" class="btn btn-primary" (click)="sendGameRequest()">
