--- a/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
+++ b/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
@@ -22,7 +22,12 @@
   <button type="button" class="btn btn-secondary" (click)="closeModal()">
     Close
   </button>
-  <button type="button" class="btn btn-primary" (click)="sendFriendRequest()">
+  <button
+    *ngIf="!isFriend"
+    type="button"
+    class="btn btn-primary"
+    (click)="sendFriendRequest()"
+  >
     Freund hinzufügen
   </button>
   <button type="button" class="btn btn-primary" (click)="sendGameRequest()">
