--- a/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.css
+++ b/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.css
@@ -29,3 +29,16 @@ button:hover,
   background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
   box-shadow: 5px 5px 10px #00dbde;
 }
+.endScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: green;
+  border-radius: 20px;
+  height: 85%;
+}
+.centerItems {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
