--- a/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
+++ b/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
@@ -31,6 +31,15 @@
     Freund hinzufügen
   </button>
   <button
+    *ngIf="isFriend"
+    type="button"
+    class="btn btn-primary"
+    style="background-color: red; border-color: red"
+    (click)="deleteFriend()"
+  >
+    Freund Löschen
+  </button>
+  <button
     *ngIf="isOnline"
     type="button"
     class="btn btn-primary"
