--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -13,7 +13,7 @@
       </h2>
       <div class="list-group list-group-flush" *ngFor="let user of allUsers">
         <button
-          *ngIf="!isSelf(user!.id!)"
+          *ngIf="!isSelf(user!.id!) && user!.username !== 'admin'"
           class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
           (click)="openPlayerModal(user, false, isUserInOnlineUsers(user!.id!))"
         >
