--- a/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
+++ b/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
@@ -4,7 +4,10 @@
 >
   Spiel Verlauf
 </h2>
-<div class="row d-flex justify-content-center">
+<div
+  class="row d-flex justify-content-center"
+  style="height: 415px; overflow-y: scroll"
+>
   <div
     *ngFor="let quiz of this.quizzes.slice().reverse()"
     class="m-2 col-md-8"
