--- a/frontend/src/app/pages/homepage/profil/profil.component.html
+++ b/frontend/src/app/pages/homepage/profil/profil.component.html
@@ -10,8 +10,8 @@
   <span class="material-icons" style="font-size: 140px">person</span>
   <div class="mx-3 my-3">
     <h3>Username: {{ userModel?.username }}</h3>
-    <h3>E-Mail: {{ email }}</h3>
-    <h3>Punkte: {{ points }} (Sieg +3 Niederlage -2 ?)</h3>
+    <h3>E-Mail: {{ userModel?.email }}</h3>
+    <h3>Gewonnen: {{ userModel?.gamesWon }}</h3>
   </div>
 </div>
 <!-- Bottom -->
