--- a/frontend/src/app/pages/homepage/statistik/statistik.component.html
+++ b/frontend/src/app/pages/homepage/statistik/statistik.component.html
@@ -5,7 +5,7 @@
   Spieler Statistik
 </h2>
 
-<div class="row m-3">
+<div class="row m-3" style="height: 400px">
   <div class="col-md-4 mx-3">
     <h2>Spiele Gesamt: {{ userAllGames }}</h2>
     <h2>Gewonnen: {{ userWins }}</h2>
